# wolt-app

./: .flake8  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  pyproject.toml  readme.md
.circleci/: config.yml
tests/: conftest.py  data.json  test_wolt.py
wolt/: app.py  config.py  constants.py  response_serializer.py  serializer.py  utils.py  views.py
